--- a/index.html
+++ b/index.html
@@ -2896,6 +2896,46 @@ async function daftarPesakit(){
   window.addEventListener('load', () => {
     try { initGoogleSignIn(); } catch(e) { console.error(e); }
   });
+    
+(function () {
+  // Helper: load script sekali sahaja
+  window.loadScriptOnce = window.loadScriptOnce || (function () {
+    const loaded = new Set();
+    return function loadScriptOnce(url) {
+      return new Promise((resolve, reject) => {
+        if (loaded.has(url)) return resolve();
+        const s = document.createElement('script');
+        s.src = url;
+        s.async = true;
+        s.onload = () => { loaded.add(url); resolve(); };
+        s.onerror = () => reject(new Error('Gagal muat: ' + url));
+        document.head.appendChild(s);
+      });
+    };
+  })();
+
+  // OVERRIDE: pastikan hanya cuba CDN (tiada lagi 'vendor/...').
+  window.ensureXLSXReady = async function ensureXLSXReady() {
+    if (window.XLSX) return;
+    const cdns = [
+      'https://cdn.jsdelivr.net/npm/xlsx@0.19.3/dist/xlsx.full.min.js',
+      'https://unpkg.com/xlsx@0.19.3/dist/xlsx.full.min.js',
+      'https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.19.3/xlsx.full.min.js'
+    ];
+    let lastErr;
+    for (const url of cdns) {
+      try {
+        await window.loadScriptOnce(url);
+        if (window.XLSX) {
+          console.log('[XLSX] Loaded from', url);
+          return;
+        }
+      } catch (e) { lastErr = e; }
+    }
+    console.error('[XLSX] Gagal dimuat dari semua CDN.');
+    throw new Error('Tidak dapat memuatkan SheetJS (XLSX).');
+  };
+})();
   </script>
 </body>
 </html>
